--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -2,9 +2,9 @@
 
 <h1>Compose</h1>
 
-<form action="" method="POST">
-    <input type="text" name="newPost" autocomplete="off">
-    <button>Publish</button>
+<form action="/compose" method="POST">
+    <input type="text" name="newPost" id="postTitle" autocomplete="off">
+    <button type="submit">Publish</button>
 </form>
 
 <%- include('partials/footer.ejs') %>
