--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,9 +1,9 @@
 .container-fluid {
-    padding-top: 70px;
-    padding-bottom: 70px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 .navbar {
-    padding-top: 15px;
+    /* padding-top: 15px; */
     padding-bottom: 15px;
     border: 0;
     border-radius: 0;
