--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -3,13 +3,18 @@
 <h1>Compose</h1>
 
 <form action="/compose" method="POST">
-    <label for="postTitle">Title</label>
-    <input type="text" name="newPost" id="postTitle" autocomplete="off">
-
-    <label for="postContent">Post</label>
-    <input type="textarea" name="postContent" id="postContent">
-
-    <button class="btn btn-primary" type="submit">Publish</button>
-</form>
+    <div class="mb-3">
+        <label for="postTitle" class="form-label">Title</label>
+        <input type="text" class="form-control" name="newPost" id="postTitle" autocomplete="off">
+    </div>
+    <div class="mb-3">
+        <label for="postContent" class="form-label">Post</label>
+        <div class="form-floating">
+            <textarea class="form-control" id="postContent" style="height: 100px"></textarea>
+            <label for="postContent">Post</label>
+          </div>
+    </div>
+    <button type="submit" class="btn btn-primary">Publish</button>
+  </form>
 
 <%- include('partials/footer.ejs') %>
