pass compose form data to controller

--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -5,12 +5,12 @@
 <form action="/compose" method="POST">
     <div class="mb-3">
         <label for="postTitle" class="form-label">Title</label>
-        <input type="text" class="form-control" name="newPost" id="postTitle" autocomplete="off">
+        <input type="text" class="form-control" name="postTitle" id="postTitle" autocomplete="off">
     </div>
     <div class="mb-3">
         <label for="postContent" class="form-label">Post</label>
         <div class="form-floating">
-            <textarea class="form-control" id="postContent" style="height: 100px"></textarea>
+            <textarea class="form-control" id="postBody" name="postBody" style="height: 100px"></textarea>
             <label for="postContent">Post</label>
           </div>
     </div>
