adjust home view for showing posts

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,4 +4,9 @@
 
 <p><%= startingContent %></p>
 
+<% for (let i = 0; i < posts.length; i++) { %>
+<% console.log(posts[i].title)%>
+<% } %>
+
+
 <%- include('partials/footer.ejs') %>
