change for loop to foreach loop

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,9 +4,10 @@
 
 <p><%= startingContent %></p>
 
-<% for (let i = 0; i < posts.length; i++) { %>
-<% console.log(posts[i].title)%>
-<% } %>
+<% posts.forEach(element => { %>
+    <% console.log(element.title)%>
+<% }); %>
+
 
 
 <%- include('partials/footer.ejs') %>
