--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,8 @@
 <p><%= startingContent %></p>
 
 <% posts.forEach(element => { %>
-    <% console.log(element.title)%>
+    <h1><%= element.title %></h1>
+    <p><%= element.body %></p>
 <% }); %>
 
 
