--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,20 +1,14 @@
-<%- include('partials/header.ejs') %>
 
+<%- include("partials/header"); -%>
 <h1>Compose</h1>
+<form class="" action="/compose" method="post">
+  <div class="form-group">
+    <label>Title</label>
+    <input class="form-control" type="text" name="postTitle">
+    <label>Post</label>
+    <textarea class="form-control" name="postBody" rows="5" cols="30"></textarea>
+  </div>
+  <button class="btn btn-primary" type="submit" name="button">Publish</button>
+</form>
 
-<form action="/compose" method="POST">
-    <div class="mb-3">
-        <label for="postTitle" class="form-label">Title</label>
-        <input type="text" class="form-control" name="postTitle" id="postTitle" autocomplete="off">
-    </div>
-    <div class="mb-3">
-        <label for="postContent" class="form-label">Post</label>
-        <div class="form-floating">
-            <textarea class="form-control" id="postBody" name="postBody" style="height: 100px"></textarea>
-            <label for="postContent">Post</label>
-          </div>
-    </div>
-    <button type="submit" class="btn btn-primary">Publish</button>
-  </form>
-
-<%- include('partials/footer.ejs') %>
+<%- include("partials/footer"); -%>
